--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,16 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
+            android:name=".otpview.view.OTPActivity"
+            android:label="@string/otp"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible"
+            />
+
+        <activity
             android:name=".pinview.view.PinSetActivity"
             android:label="@string/title_activity_pin_set"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".notification.view.NotificationActivity"
             android:label="@string/notification"
@@ -146,7 +153,7 @@
         <activity
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
