--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,9 @@
 
         <activity
             android:name=".pinview.view.PinSetActivity"
-            android:label="@string/title_activity_pin_set"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/set_up_pin"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".notification.view.NotificationActivity"
             android:label="@string/notification"
