--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,12 +28,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+
         <activity
             android:name=".otpview.view.OTPActivity"
             android:label="@string/otp"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible"
-            />
+            >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
 
         <activity
             android:name=".pinview.view.PinSetActivity"
@@ -154,11 +161,11 @@
         <activity
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
-           <intent-filter>
+          <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".main.MainActivity"
