--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,7 @@
             android:label="@string/otp"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible"
-            >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+            />
 
         <activity
             android:name=".pinview.view.PinSetActivity"
@@ -161,11 +155,11 @@
         <activity
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
-          <!-- <intent-filter>
+          <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".main.MainActivity"
@@ -178,7 +172,7 @@
         <activity
             android:name=".registration.view.RegistrationStepOneActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".registration.view.RegistrationStepTwoActivity"
             android:screenOrientation="portrait"
