--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -204,8 +204,8 @@
             -->
         </activity>
         <activity
-            android:name=".password.view.ChangePasswordActivity"
-            android:label="@string/change_password"
+            android:name=".password.view.ChangeLoginPinActivity"
+            android:label="@string/change_login_pin"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
