--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -210,7 +210,7 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".pin.view.ChangePinActivity"
-            android:label="@string/change_pin"
+            android:label="@string/change_transactional_pin"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
 
