--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,11 +157,11 @@
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
 
-        <intent-filter>
+       <!-- <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </intent-filter>-->
 
         </activity>
 
@@ -182,6 +182,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".password.view.ForgotPasswordActivity"
