--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,10 +78,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".registration.view.RegistrationStepThreeActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".profile.view.ActivityViewFile"
             android:label="@string/view_file"
@@ -182,12 +179,23 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible">
 
+
+
+        </activity>
+
+        <activity
+            android:name=".registration.view.RegistrationStepThreeActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
             android:name=".password.view.ForgotPasswordActivity"
             android:screenOrientation="portrait"
