--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <activity
             android:name=".pinview.view.PinSetActivity"
-            android:label="@string/set_up_pin"
+            android:label="@string/pin"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
         <activity
