--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -193,7 +193,7 @@
         </activity>
 
         <activity
-            android:name=".password.view.ForgotPasswordActivity"
+            android:name=".pin.view.ForgotPasswordActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
         <activity
@@ -210,7 +210,7 @@
             -->
         </activity>
         <activity
-            android:name=".password.view.ChangeLoginPinActivity"
+            android:name=".pin.view.ChangeLoginPinActivity"
             android:label="@string/change_login_pin"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
