--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,7 +164,9 @@
 
         <activity
             android:name=".main.MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            />
         <activity
             android:name=".login.view.LoginActivity"
             android:screenOrientation="portrait"
@@ -193,7 +195,7 @@
         </activity>
 
         <activity
-            android:name=".pin.view.ForgotPasswordActivity"
+            android:name=".pin.view.ForgotPinActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
         <activity
