--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,11 +154,11 @@
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
 
-            <intent-filter>
+          <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
 
         </activity>
 
@@ -181,8 +181,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible">
 
-
-
         </activity>
 
         <activity
@@ -191,6 +189,11 @@
             android:windowSoftInputMode="stateHidden" >
 
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
 
@@ -203,14 +206,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
 
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-        </activity>
+         </activity>
         <activity
             android:name=".pin.view.ChangeLoginPinActivity"
             android:label="@string/change_login_pin"
