--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:xlargeScreens="true" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
@@ -39,6 +40,7 @@
             android:label="@string/calculate_your_loan"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"
+
             />
         <activity
             android:name=".help.view.HelpActivity"
