--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 11 10:57:27 IST 2019
-sdk.dir=/root/Android/Sdk
+#Fri Aug 09 08:03:06 IST 2019
+sdk.dir=/home/amiyo/Android/Sdk
