--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
     }
+    implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
