--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
     }
+    //CameraX Libs
+    def cameraX = "1.0.0-alpha04"
+    implementation "androidx.camera:camera-core:${cameraX}"
+    implementation "androidx.camera:camera-camera2:${cameraX}"
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
