--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,10 +87,14 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
     }
-    //CameraX Libs
+    implementation 'io.fotoapparat:fotoapparat:2.6.1'
+    // Kotlin Android Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0-RC1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0-RC1"
+    /*//CameraX Libs
     def cameraX = "1.0.0-alpha04"
     implementation "androidx.camera:camera-core:${cameraX}"
-    implementation "androidx.camera:camera-camera2:${cameraX}"
+    implementation "androidx.camera:camera-camera2:${cameraX}"*/
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
