--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 16 23:44:26 IST 2019
+#Mon Aug 19 13:11:54 IST 2019
 >>>>>>>=34aab40c71be73b5d53b65f515c3439e95989193
-sdk.dir=/home/amiyo/Android/Sdk
-<<<<<<<=HEAD
+sdk.dir=/root/Android/Sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
