--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 19 13:11:54 IST 2019
+#Thu Aug 29 23:39:22 IST 2019
 >>>>>>>=34aab40c71be73b5d53b65f515c3439e95989193
-sdk.dir=/root/Android/Sdk
-=\=\=\=\=\=\=
+sdk.dir=/home/amiyo/Android/Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
