--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 13 11:28:50 IST 2019
-sdk.dir=/root/Android/Sdk
+#Tue Jan 07 15:16:20 IST 2020
+sdk.dir=/home/cx-26/Android/Sdk
