--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,9 @@ fabric.properties
 ### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023 
 
+#Idea
+.idea/
+
 modules.xml
 .idea/misc.xml 
 *.ipr
