~ email verify api call implemented...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,8 @@ dependencies {
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+
 
 }
